# rp2040_FreeRTOS

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md
docs/: Servo.md  proximity.md  servo_currentconsumption.md
inc/: FreeRTOSConfig.h  pins_board.h  pins_picofeeder_board.h  project_config.h
lib/: CMakeLists.txt
lib/CAN/: CMakeLists.txt  can2040.h
lib/freeRTOS/: CMakeLists.txt
lib/magnetic_encoder/: CMakeLists.txt  encoder.cpp  encoder.h
lib/private_functions/: CMakeLists.txt  private_functions.cpp  private_functions.h
lib/utils/: CMakeLists.txt  can_frames.h  can_functions.cpp  can_functions.h  dynamixel_functions.cpp  dynamixel_functions.h  functions.cpp  functions.h
lib/ws2812/: CMakeLists.txt  ws2812.cpp
src/: CMakeLists.txt  fourtasks.cpp  main.cpp
